Refactored out the saving lineup code from the post into its own method, made some changes to make sonarqube happy and changes from the reviewer's request